# agent-workflow-builder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLONE.md  README.md  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
.claude/: settings.local.json
.github/workflows/: clone-stats.yml
examples/chat-app/: .env.local.example  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/web/: Dockerfile  package.json  tsconfig.tsbuildinfo
libs/auth/: package.json
libs/integration-provider/: package.json  tsconfig.json
libs/nats-client/: package.json
libs/observability/: package.json
libs/prisma-client/: package.json
libs/shared-types/: package.json
scripts/: minikube-deploy.sh
services/agent-builder/: Dockerfile  nest-cli.json  package.json
services/agent-builder-py/: Dockerfile  pyproject.toml
services/agent-builder-py/src/: handler.py  main.py
services/agent-builder-py/src/planner/: callbacks.py  graph.py  prompt.py  tools.py
services/agent-runtime/: Dockerfile  nest-cli.json  package.json
services/agent-runtime-py/: Dockerfile  pyproject.toml
services/agent-runtime-py/src/: handler.py  main.py
services/agent-runtime-py/src/executor/: callbacks.py  ddg_search.py  file_tools.py  graph.py  prompt.py  tool_factory.py
services/api-gateway/: Dockerfile  nest-cli.json  package.json
services/connection-registry/: Dockerfile  nest-cli.json  package.json
services/shared-py/: pyproject.toml
services/shared-py/shared/: config.py  db.py  events.py  models.py  nango_client.py  nats_client.py
(+189 files in other folders)
